--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,10 @@
   cursor: pointer;
 }
 
+.btn__image {
+  display: block;
+}
+
 .icon {
   display: inline-block;
   vertical-align: middle;
